--- a/packages/ui/src/components/navigation-menu/NavigationMenuContent.astro
+++ b/packages/ui/src/components/navigation-menu/NavigationMenuContent.astro
@@ -19,7 +19,7 @@ const { class: className = "", ...rest } = Astro.props as Props;
     "transition-discrete transition-[opacity,transform] duration-150 ease-out",
     "data-[state=active]:opacity-100 fade-in data-[state=active]:pointer-events-auto data-[state=inactive]:fade-out data-[state=inactive]:pointer-events-none",
     "data-[motion='from-right']:animate-slide-in-from-right-4 data-[motion=from-left]:animate-slide-in-from-left-4 data-[motion=to-right]:animate-slide-to-right-4 data-[state=active]:animate-in data-[state=inactive]:animate-out",
-    "absolute z-20 top-full pt-4 px-3",
+    "absolute z-20 top-full pt-2",
     className,
   )}
 >
