--- a/apps/web/src/components/PageTitle.astro
+++ b/apps/web/src/components/PageTitle.astro
@@ -325,6 +325,7 @@ const options = [...filteredDefaultOptions, ...customOptions];
     margin-top: calc(var(--spacing) * 4);
     margin-bottom: calc(var(--spacing) * 2);
     width: 100%;
+    max-width: 52ch;
   }
 
   @layer starlight.core {
