--- a/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
@@ -119,6 +119,7 @@ const isRtl = dir === "rtl";
     margin-top: calc(var(--spacing) * 4);
     margin-bottom: calc(var(--spacing) * 2);
     width: 100%;
+    max-width: 52ch;
   }
 
   @layer starlight.core {
