feat(starlight-theme): improve bgs

--- a/packages/starlight-theme-bejamas/src/overrides/Footer.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/Footer.astro
@@ -115,10 +115,14 @@ import config from "virtual:starlight/user-config";
       -webkit-backdrop-filter: blur(var(--blur));
       backdrop-filter: blur(var(--blur));
 
-      background: linear-gradient(to bottom, transparent, var(--background));
+      background: linear-gradient(
+        to bottom,
+        transparent,
+        var(--sl-page-background)
+      );
       mask-image: linear-gradient(
         to top,
-        var(--background) var(--stop),
+        var(--sl-page-background) var(--stop),
         transparent
       );
       bottom: 0;
