--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -5,16 +5,13 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 
 <StarlightPage
   frontmatter={{
-    title: "The UI system for Astro. Copy. Customize. Ship.",
+    title: "Astro UI library. Copy and own the code.",
     description:
       "Clean, lightweight Astro UI components built with Tailwind v4 and zero dependencies. Copy-paste the snippet into your project and fully own the code.",
     template: "splash",
     hero: {
-      title: `The <span class="font-serif relative inline-block pr-0.5"><div class="absolute top-0.5 lg:top-1 w-full pointer-events-none h-8 md:h-12 border-2 border-accent"><span class="absolute -left-2 -top-2 size-2 border-2 border-accent"></span><span class="absolute -right-2 -top-2 size-2 border-2 border-accent"></span><span class="absolute -left-2 -bottom-2 size-2 border-2 border-accent"></span><span class="absolute -right-2 -bottom-2 size-2 border-2 border-accent"></span></div>UI foundation</span> for large marketing sites.`,
-      tagline: `
-        Built on
-          <svg
-            class="inline-block size-5 -mr-1 dark:invert"
+      title: `<svg
+            class="inline-block size-10 -mr-1 dark:invert"
             xmlns="http://www.w3.org/2000/svg"
             width="85"
             height="107"
@@ -29,15 +26,16 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
               d="M0 69.5866C0 69.5866 14.3139 62.6137 28.6678 62.6137L39.4901 29.1204C39.8953 27.5007 41.0783 26.3999 42.4139 26.3999C43.7495 26.3999 44.9325 27.5007 45.3377 29.1204L56.1601 62.6137C73.1601 62.6137 84.8278 69.5866 84.8278 69.5866C84.8278 69.5866 60.5145 3.35233 60.467 3.21944C59.7692 1.2612 58.5911 0 57.0029 0H27.8274C26.2392 0 25.1087 1.2612 24.3634 3.21944C24.3108 3.34983 0 69.5866 0 69.5866Z"
               fill="#17191E"
             />
-          </svg>
-          Astro, with copy-and-own code and 
+          </svg> Astro <span class="font-serif relative inline-block pr-0.5"><div class="absolute top-0.5 lg:top-1 w-full pointer-events-none h-8 md:h-12 border-2 border-accent"><span class="absolute -left-2 -top-2 size-2 border-2 border-accent"></span><span class="absolute -right-2 -top-2 size-2 border-2 border-accent"></span><span class="absolute -left-2 -bottom-2 size-2 border-2 border-accent"></span><span class="absolute -right-2 -bottom-2 size-2 border-2 border-accent"></span></div>UI</span> library.`,
+      tagline: `
+        Copy-and-own code and 
           <a
             href="/docs/auto-generated-docs"
             class="border-b border-muted-foreground/40 hover:text-foreground relative pb-0.5 hover:border-muted-foreground/80 transition-colors group"
           >
             auto-generated component docs
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide group-hover:translate-x-0.5 group-hover:-translate-y-0.5 transition-transform ease-in-out duration-200 lucide-arrow-up-right-icon lucide-arrow-up-right inline-block size-4"><path d="M7 7h10v10"/><path d="M7 17 17 7"/></svg>
-          </a> — letting teams scale content platforms instead of maintaining UI systems.
+          </a> — scale content platforms instead of maintaining UI systems.
       `,
       actions: [
         {
@@ -56,10 +54,10 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
   }}
 >
   <BrowserHero />
-  <div id="browser-hero-panel-end" class="w-full mt-[-1px] h-px bottom-0 -z-10">
+  <div id="browser-hero-panel-end" class="w-full -mt-px h-px bottom-0 -z-10">
   </div>
   <div
-    class="hidden md:block h-full fixed scroll-fade-out bg-muted top-14 border left-6 right-6 rounded-t-3xl"
+    class="hidden md:block h-full fixed scroll-fade-out bg-background dark:bg-muted/30 top-14 border left-6 right-6 rounded-t-3xl"
   >
   </div>
   <div
