feat(ui): add popover

--- a/apps/web/src/pages/battlefield/select.astro
+++ b/apps/web/src/pages/battlefield/select.astro
@@ -242,7 +242,7 @@ import {
             <SelectTrigger size="sm">
               <SelectValue placeholder="Small size" />
             </SelectTrigger>
-            <SelectContent>
+            <SelectContent size="sm">
               <SelectItem value="apple">Apple</SelectItem>
               <SelectItem value="banana">Banana</SelectItem>
               <SelectItem value="cherry">Cherry</SelectItem>
@@ -268,7 +268,7 @@ import {
             <SelectTrigger size="lg">
               <SelectValue placeholder="Large size" />
             </SelectTrigger>
-            <SelectContent>
+            <SelectContent size="lg">
               <SelectItem value="apple">Apple</SelectItem>
               <SelectItem value="banana">Banana</SelectItem>
               <SelectItem value="cherry">Cherry</SelectItem>
