--- a/apps/web/src/components/PageTitle.astro
+++ b/apps/web/src/components/PageTitle.astro
@@ -53,6 +53,12 @@ import {
   NavigationMenuTrigger,
 } from "@bejamas/ui/components/navigation-menu";
 
+import {
+  Popover,
+  PopoverContent,
+  PopoverTrigger,
+} from "@bejamas/ui/components/popover";
+
 import Icon from "./icons/Icon.astro";
 import ThemeEditorGlobal from "./theme-editor/ThemeEditorGlobal.astro";
 
@@ -336,6 +342,15 @@ const options = [...filteredDefaultOptions, ...customOptions];
       left
     </ToggleGroupItem>
   </ToggleGroup>
+
+  <Popover>
+    <PopoverTrigger>
+      <Button variant="ghost">Toggle</Button>
+    </PopoverTrigger>
+    <PopoverContent>
+      <p>Hidden content here</p>
+    </PopoverContent>
+  </Popover>
 </div>
 
 <style>
