--- a/packages/ui/src/components/select/SelectItem.astro
+++ b/packages/ui/src/components/select/SelectItem.astro
@@ -26,7 +26,7 @@ const {
   data-disabled={disabled ? "" : undefined}
   class={cn(
     "group/item relative border border-transparent flex w-full cursor-default select-none items-center gap-1.5 rounded-md pr-8 pl-2 text-sm outline-hidden",
-    "group-data-[size=sm]/select:h-8 group-data-[size=default]/select:h-9 group-data-[size=lg]/select:h-10",
+    "group-data-[size=sm]/select-content:py-1 group-data-[size=default]/select-content:py-1.5 group-data-[size=lg]/select-content:py-2",
     "data-[highlighted]:bg-accent data-[highlighted]:text-accent-foreground",
     "data-[disabled]:pointer-events-none data-[disabled]:opacity-50",
     "[&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0",
