--- a/packages/ui/src/components/popover/PopoverContent.astro
+++ b/packages/ui/src/components/popover/PopoverContent.astro
@@ -20,6 +20,12 @@ const alignClasses = {
   center: "left-1/2 -translate-x-1/2",
   end: "right-0",
 };
+
+const originClasses = {
+  start: "origin-top-left",
+  center: "origin-top",
+  end: "origin-top-right",
+};
 ---
 
 <!-- Outer: visibility + group + positioning -->
@@ -32,7 +38,7 @@ const alignClasses = {
     "group/popover-content",
     "absolute top-full mt-[var(--side-offset)] z-50",
     alignClasses[align],
-    "hidden data-[state=open]:block",
+    "hidden data-[state=open]:block [transition:display_150ms_allow-discrete]",
     className,
   )}
 >
@@ -45,6 +51,8 @@ const alignClasses = {
       "group-data-[state=open]/popover-content:animate-in group-data-[state=closed]/popover-content:animate-out",
       "group-data-[state=closed]/popover-content:fade-out-0 group-data-[state=open]/popover-content:fade-in-0",
       "group-data-[state=closed]/popover-content:zoom-out-95 group-data-[state=open]/popover-content:zoom-in-95",
+      originClasses[align],
+      "[--tw-animation-fill-mode:both]",
     )}
   >
     <slot />
